Bug 140611: When a block element is first in RTL <LI>, bullet moves left. patch by Lina Kemmel lkemmel@il.ibm.com, r=smontagu, sr=dbaron.